# tardigrade

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  INSTALL.sh.in  LICENSE  Makefile  Makefile.in  README.md  environment.txt  reduced_environment.txt  testroot
.github/workflows/: github-test.yml  release.yml
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/sphinx/: CMakeLists.txt  api.rst  build.txt  changelog.rst  conf.py.in  contribution.txt  dependencies.txt  devops.rst  gitlab_setup.rst  index.rst  md2rst.txt  project_brief.txt  release_philosophy.rst  software.bib  targets.txt  user.rst  zreferences.rst
ignored_files/include/auxkernels/: ComputeProjectorAux.h  DummyAux.h  ElementUOAux.h  NodalUOAux.h
ignored_files/include/kernels/: InternalCoupleOverlap.h  InternalForceOverlap.h  StressDivergenceTensorsOverlap.h
ignored_files/include/userobjects/: DNSFVectors.h  ElementIntegrateUserObject.h
ignored_files/src/auxkernels/: DummyAux.C  ElementUOAux.C  NodalUOAux.C
ignored_files/src/kernels/: InternalCoupleOverlap.C  InternalForceOverlap.C
ignored_files/src/userobjects/: DNSFVectors.C  ElementIntegrateUserObject.C  MicromorphicDOFUserObject.C  NodalOverlapUserObject.C
include/: CMakeLists.txt
include/actions/: GradientEnhancedDamagedMicromorphicContinuumAction.h  MicromorphicContinuumAction.h
include/auxkernels/: CMakeLists.txt  DOFTimeDerivative.h  NodalUOAux.h  NodalVolumeAverages.h  VolumeIntegralConstant.h
include/base/: CMakeLists.txt  tardigradeApp.h
include/bcs/: CMakeLists.txt  CoupledDirichletBC.h
include/kernels/: CMakeLists.txt  InertialCouple.h  InertialForce.h  InternalCouple.h  InternalForce.h  MicromorphicInertialCouple.h  MicromorphicInertialForce.h  MicromorphicLinearElasticity.cpp  MicromorphicMaterial.h  ProjectedDOF.h
include/materials/: CMakeLists.txt  GradientEnhancedDamagedMicromorphicMaterial.h  MicromorphicMaterial.h
include/nodalkernels/: CMakeLists.txt  CouplingForce.h  MinimumExample.h
include/outputs/: CMakeLists.txt  Xdmf.h
include/transfers/: CMakeLists.txt  MultiAppOverlapCouplingTransfer.h
include/userobjects/: CMakeLists.txt  DNSDOFUserObject.h  DNSFVectors.h  ElementIntegrateUserObject.h  ElementOverlapUserObject.h  MicromorphicDOFUserObject.h  NodalDOFUserObject.h  NodalOverlapUserObject.h  OutputXdmf.h  OverlapCoupling.h  OverlapCouplingGeneralUserObject.h  ProjectionUserObject.h  ProjectorUserObject.h
modulefiles/: tardigrade-env
python/: process_data.py
recipe/: conda_build_config.yaml  meta.yaml
src/: CMakeLists.txt  main.C
src/actions/: GradientEnhancedDamagedMicromorphicContinuumAction.C  MicromorphicContinuumAction.C
src/auxkernels/: CMakeLists.txt  ComputeProjectorAux.C  DOFTimeDerivative.C  NodalUOAux.C  NodalVolumeAverages.C  VolumeIntegralConstant.C
src/base/: CMakeLists.txt  tardigradeApp.C
src/bcs/: CMakeLists.txt  CoupledDirichletBC.C
src/cmake/: GetVersionFromGitTag.cmake
src/kernels/: CMakeLists.txt  InertialCouple.C  InertialForce.C  InternalCouple.C  InternalForce.C  InternalForce.cpp  MicromorphicInertialCouple.C  MicromorphicInertialForce.C  MicromorphicLinearElasticity.cpp  MicromorphicMaterial.C  MicromorphicMaterial.cpp  ProjectedDOF.C  StressDivergenceTensorsOverlap.C
src/materials/: CMakeLists.txt  GradientEnhancedDamagedMicromorphicMaterial.C  MicromorphicMaterial.C
src/nodalkernels/: CMakeLists.txt  CouplingForce.C  MinimumExample.C
src/outputs/: CMakeLists.txt  Xdmf.C
src/transfers/: CMakeLists.txt  MultiAppOverlapCouplingTransfer.C
src/userobjects/: CMakeLists.txt  DNSDOFUserObject.C  DNSFVectors.C  ElementIntegrateUserObject.C  ElementOverlapUserObject.C  MicromorphicDOFUserObject.C  NodalDOFUserObject.C  NodalOverlapUserObject.C  OutputXdmf.C  OverlapCoupling.C  OverlapCouplingGeneralUserObject.C  ProjectionUserObject.C  ProjectorUserObject.C
test/: CMakeLists.txt
test/include/base/: CMakeLists.txt  tardigradeTestApp.h
test/src/base/: CMakeLists.txt  tardigradeTestApp.C
test/tests/: CMakeLists.txt
test/tests/action/: micromorphic_uniaxial_tension.i  tests
test/tests/action/gold/: micromorphic_uniaxial_tension_out.e
test/tests/kernels/: CMakeLists.txt
test/tests/kernels/const_mms/: CMakeLists.txt  const_mms.i
test/tests/kernels/const_mms/gold/: const_mms_out.e
test/tests/kernels/const_mms_overlap/: CMakeLists.txt  const_mms_overlap.i  tests
test/tests/kernels/const_mms_overlap/gold/: const_mms_overlap_out.e
test/tests/kernels/linear_mms/: CMakeLists.txt  linear_mms.i
test/tests/kernels/linear_mms/gold/: linear_mms_out.e
test/tests/kernels/linear_mms_overlap/: CMakeLists.txt  linear_mms_overlap.i  tests
test/tests/kernels/rotate_stretch/: CMakeLists.txt  rotate_stretch.i  rotate_stretch_ic.i  tests
test/tests/kernels/rotate_stretch/gold/: rotate_stretch_out.e
test/tests/kernels/simple_diffusion/: CMakeLists.txt
test/tests/kernels/stretch_y/: CMakeLists.txt  stretch_y.i  stretch_y_ic.i  tests
test/tests/kernels/stretch_y/gold/: stretch_y_out.e
test/tests/kernels/stretch_y_plastic/: CMakeLists.txt  stretch_y_plastic.i  tests
test/tests/kernels/stretch_y_plastic/gold/: stretch_y_plastic_out.e
test/tests/userobjects/: CMakeLists.txt
test/tests/userobjects/overlapping_columns/: CMakeLists.txt  overlapping_columns.i  overlapping_columns.jou
unit/: Makefile  run_tests
unit/src/: main.C
